--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,5 @@
 	<classpathentry kind="lib" path="/Users/aaronwong/Documents/workspace_java/guava-16.0.1.jar"/>
 	<classpathentry kind="lib" path="/Users/aaronwong/Documents/workspace_java/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="lib" path="/Users/aaronwong/Documents/workspace_java/guava-gwt-16.0.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
